--- a/ScanMIDI/ScanMIDI.vcxproj.filters
+++ b/ScanMIDI/ScanMIDI.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="scanxmi.c">
+    <ClCompile Include="scanmidi.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
