--- a/XMItoMIDloop/XMItoMIDloop.vcxproj
+++ b/XMItoMIDloop/XMItoMIDloop.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{98155606-DB82-4274-96B5-6EE40FE9695D}</ProjectGuid>
-    <RootNamespace>XMItoMID</RootNamespace>
+    <ProjectGuid>{A927D40A-89C3-4152-A534-8E5057DB5B29}</ProjectGuid>
+    <RootNamespace>XMItoMIDloop</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -111,7 +111,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="scanxmi.c" />
+    <ClCompile Include="scanxmil.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
