--- a/XMItoMIDloop/XMItoMIDloop.vcxproj.filters
+++ b/XMItoMIDloop/XMItoMIDloop.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="scanxmi.c">
+    <ClCompile Include="scanxmil.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
